--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-travel-journal",
-  "homepage": "https://ERy03.github.io/rreact-travel-journal",
+  "homepage": "https://ERy03.github.io/react-travel-journal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
